--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,11 @@
   padding: 10px;
 }
 
+.content-subtitlesins {
+  color: rgb(0, 0, 0);
+  padding: 10px;
+}
+
 .section-footer {
   background: rgb(0, 0, 0);
   background: radial-gradient(
@@ -290,11 +295,6 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
-
-.section-areas {
-  margin: 0 auto;
-  width: 80%;
 }
 
 .contenedor {
@@ -510,6 +510,9 @@ main {
 h2 {
   text-align: center;
 }
+.h3b {
+  text-align: center;
+}
 
 .btnp {
   display: flex;
@@ -524,6 +527,24 @@ h2 {
   background-color: brown;
   font-family: roboto;
   font-size: 20px;
+  color: rgb(255, 255, 255);
+  margin: 6px 0;
+}
+.btninst {
+  height: 50px;
+  width: 100%;
+  background-color: #0e047b;
+  font-family: roboto;
+  font-size: 30px;
+  color: rgb(255, 255, 255);
+  margin: 6px 0;
+}
+
+.btninst-text {
+  height: 50px;
+  width: 100%;
+  font-family: roboto;
+  font-size: 30px;
   color: rgb(255, 255, 255);
   margin: 6px 0;
 }
@@ -692,11 +713,74 @@ a {
   align-items: baseline;
 }
 
-.section-areas {
-  margin: 0 auto;
-  width: 80%;
+.title-is {
+  display: flex;
+  background-color: #bf1d1d;
+  height: 50px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.btnp:hover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 50px;
 }
 
+.btn {
+  height: 50px;
+  width: 100%;
+  background-color: brown;
+  font-family: roboto;
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  margin: 6px 0;
+}
+
+.padres {
+  text-align: center;
+}
+
+.content-boton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 100px;
+  align-content: space-between;
+  justify-content: center;
+}
+.a-btn {
+  text-decoration: none;
+  color: #0000f2;
+  font-size: 30px;
+}
+.boton {
+  background-color: rgb(200, 200, 205);
+  border: rgb(110, 4, 4) 10px outset;
+  height: 150px;
+  width: 700px;
+  display: end;
+  font-size: 16px;
+  font-family: roboto;
+}
+.button {
+  width: 300px;
+  height: 200px;
+  margin: 20px;
+  font-size: 40px;
+  text-align: center;
+  background-color: rgb(1, 34, 141) f;
+  color: #ff0000;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
 .contenedor {
   width: 100%;
   display: flex;
@@ -757,65 +841,6 @@ a {
   max-width: 220px;
   margin: auto;
 }
-.btnp {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 50px;
-}
-
-.btn {
-  height: 50px;
-  width: 100%;
-  background-color: brown;
-  font-family: roboto;
-  font-size: 20px;
-  color: rgb(255, 255, 255);
-  margin: 6px 0;
-}
-
-.padres {
-  text-align: center;
-}
-
-.content-boton {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 100px;
-  align-content: space-between;
-  justify-content: center;
-}
-.a-btn {
-  text-decoration: none;
-  color: #0000f2;
-}
-.boton {
-  background-color: rgb(200, 200, 205);
-  border: rgb(110, 4, 4) 8px outset;
-  height: 50px;
-  width: 200px;
-
-  font-size: 16px;
-  font-family: roboto;
-}
-.button {
-  width: 200px;
-  height: 100px;
-  margin: 10px;
-  font-size: 20px;
-  text-align: center;
-  background-color: rgb(1, 34, 141) f;
-  color: #ff0000;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.button:hover {
-  background-color: #0056b3;
-}
 .desing-image {
   border-radius: 25%;
 }
@@ -841,14 +866,13 @@ a {
 }
 .horarios {
   display: flex;
-
   display: flex;
   justify-content: left;
   align-items: normal;
 }
 .cp2 {
   position: absolute;
-  top: 265px;
+  top: 259px;
   right: 25px;
 }
 .pg {
@@ -858,7 +882,6 @@ a {
   align-content: space-between;
   align-items: center;
 }
-
 .pg-img {
   display: flex;
   flex-direction: column;
@@ -868,11 +891,24 @@ a {
   margin-top: 50px;
   padding: 20px 0px;
 }
-.title-is {
+/*-----------------------------------*/
+.botone {
+  background-color: rgb(200, 200, 205);
+  border: rgb(110, 4, 4) 10px outset;
+  height: 75px;
+  width: 300px;
+  font-size: 16px;
+  font-family: roboto;
+}
+.team-container {
   display: flex;
-  background-color: #bf1d1d;
-  height: 50px;
-  width: 100%;
-  align-items: center;
+  flex-wrap: wrap;
+  gap: 50px;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+.video {
+  display: flex;
   justify-content: center;
+  margin: 50px;
 }
