--- a/css/styles.css
+++ b/css/styles.css
@@ -744,11 +744,12 @@ a {
 
 .content-boton {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 100px;
   align-content: space-between;
   justify-content: center;
+  gap: 50px;
+  margin-top: 20px;
 }
 .a-btn {
   text-decoration: none;
@@ -892,23 +893,47 @@ a {
   padding: 20px 0px;
 }
 /*-----------------------------------*/
-.botone {
-  background-color: rgb(200, 200, 205);
-  border: rgb(110, 4, 4) 10px outset;
-  height: 75px;
-  width: 300px;
-  font-size: 16px;
-  font-family: roboto;
-}
-.team-container {
+.content-botone {
   display: flex;
   flex-wrap: wrap;
-  gap: 50px;
-  justify-content: space-between;
-  margin-top: 50px;
+  align-items: center;
+  align-content: space-between;
+  gap: 5px;
+  margin-top: 20px;
 }
-.video {
+
+.a-btn {
+  text-decoration: none;
+  color: #0000f2;
+  font-size: 50px;
+}
+.botone {
+  background-color: rgb(200, 200, 205);
+  border: rgb(110, 4, 4) 8px outset;
+  height: 300px;
+  width: 300px;
+  font-size: 14px;
+  font-family: roboto;
+}
+
+.proyects {
   display: flex;
-  justify-content: center;
-  margin: 50px;
+  flex-wrap: wrap;
+  gap: 30px;
+  align-content: space-between;
+  align-items: center;
+}
+
+.letters {
+  font-size: medium;
+  width: 360px;
+  color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  padding: 6px;
+}
+
+.ap {
+  text-decoration: none;
 }
