--- a/css/styles.css
+++ b/css/styles.css
@@ -982,3 +982,11 @@ a {
   font-style: italic;
   margin-top: 10px;
 }
+
+.team-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 50px;
+ justify-content: center;
+}
