--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@
   background-color: white;
   margin-left: 100px;
   margin-right: 100px;
+  
+}
+.line{
+  border-bottom: 1px solid grey;
 }
 
 .menu2 {
@@ -448,52 +452,8 @@ main {
   }
 }
 
-.content-programs {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  gap: 30px;
-}
 
-.programs {
-  background: rgb(2, 0, 36);
-  background: #08acf3; /*color de los cuadrados de texto*/
-  padding: 11px;
-  color: rgb(251, 251, 251); /*color de las letras*/
-  padding: 3px 10px;
-  border: rgba(255, 255, 255, 0) 5px solid;
-  border-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 700px;
-  font-size: 14px;
-  line-height: 0.9;
-  letter-spacing: 0.008em;
-  font-weight: 500;
-}
-.programs-2 {
-  background: rgb(2, 0, 36);
-  background: #bf1d1d; /*color de los cuadrados de texto*/
-  padding: 11px;
-  color: rgb(255, 255, 255); /*color de las letras*/
-  padding: 3px 10px;
-  border: rgba(255, 255, 255, 0) 5px solid;
-  border-radius: 15px;
-  display: flex; /*cenra*/
-  justify-content: center; /*cenra*/
-  align-items: center; /*cenra*/
-  font-size: 14px;
-  line-height: 0.9;
-  letter-spacing: 0.008em;
-  font-weight: 500;
-}
 
-.icon-em {
-  width: 50px;
-  height: 50px;
-  margin: 0.5em;
-}
 .icon-container-rad {
   height: 44px;
   width: 44px;
@@ -503,18 +463,9 @@ main {
   border-radius: 10px;
   background: rgb(34, 62, 244, 0.5);
 }
-.half/*centra todo*/ {
-  display: flex; /*cenra*/
-  justify-content: center; /*cenra*/
-  align-items: center; /*cenra*/
-}
 
-.emisora-radio-joven {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
+
+
 h2 {
   text-align: center;
 }
@@ -989,4 +940,71 @@ a {
   gap: 20px;
   margin-top: 50px;
  justify-content: center;
+}
+/* emisoras*/
+.content-programs{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 30px;
+  }
+  .programs{
+  padding:11px;
+  color:rgb(0, 0, 0);/*color de las letras*/
+  padding: 3px 10px;
+  border: rgb(3, 7, 200) 5px solid;
+  border-radius: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 700px;
+  font-size: 17px;
+  line-height: 0.9;
+  letter-spacing: 0.008em;
+  font-weight: 500;
+}
+  .programs-2{
+  border: #FF2621 5px solid;
+  padding:11px;
+  color:rgb(0, 0, 0);/*color de las letras*/
+  padding: 3px 10px;
+  border-radius: 20px;
+  display: flex;/*cenra*/
+  justify-content: center;/*cenra*/
+  align-items: center;/*cenra*/
+  font-size: 14px;
+  line-height: 0.9;
+  letter-spacing: 0.008em;
+  font-weight: 500;
+  }
+.audio{
+  border-radius: 23px;
+  border:5px solid #FF2621;
+}
+
+
+  .half/*centra todo*/{
+    display: flex;/*cenra*/
+    justify-content: center;/*cenra*/
+    align-items: center;/*cenra*/
+  }
+  .emisora-radio-joven{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .al-aire {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around ;
+    margin-right: auto;
+    color: #df2525;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.center{
+  display: flex;
+  justify-content: center;
+  padding: 15px;
 }
